package revolve.msgs;
import "parameter.proto";

message BodyPart {
  required string id = 1;
  required string type = 2;
  required double orientation = 3;
  repeated BodyConnection child = 4;
  repeated Parameter param = 5;
}

message BodyConnection {
  required int32 src = 1;
  required int32 dst = 2;
  required BodyPart part = 3;
}

message Body {
  required BodyPart root = 1;
}